css/custom.css
html, body{
     font-family: 'Gotham SSm A', 'Gotham SSm B', Helvetica, sans-serif !important;
     font-weight:400;
}
#header{
    z-index:1050;
}
#top-search-wrap{
    min-height:70px;
    height:initial !important;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
}
.product-list > .col-xs-6,.product-list > .col-sm-4,.product-list > .col-md-3{
    padding-left:5px !important;padding-right:5px !important;
}
.product-list .product-card{
    margin-bottom:10px;
}
.product-list .product-card .card-header{
    /*padding:0px;*/
    height:266px;
}
.product-list .product-card .card-header:hover{
    cursor:pointer;
}
.product-list .product-card .image{
    width:100%;
}
.product-list .product-card .product-details{
    height:235px;
    padding:0px 20px 20px 20px;
}
@media (max-width: 767px)
{
    .container{
        padding-left:5px;
        padding-right:5px;
    }
}
.product-list .product-card .card-body .tag{
    margin-top:8px;
    margin-right:3px;
    padding: 2px 5px;
    font-size: 12px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.12) !important;
}
.product-list .product-card .card-body .tag-more.btn-sm{
   padding: 2px 5px;
    font-size: 12px;
    margin-top:8px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.12) !important;
}
.product-list .product-card .card-body.card-body-padding
{
    padding:15px 25px 25px 25px;
}

.product-list .product-card .card-body .tag.btn-group-sm .btn .flaticon::before{
    font-size:12px ;
}

.product-list .product-card .carousel .carousel-control.left{
    left: -20px !important;
}
.product-list .product-card .carousel .carousel-control.right{
    right: -20px !important;
}
.product-list .product-card .carousel .carousel-control .zmdi{
    font-size:35px;
}
.product-list .product-card .carousel .carousel-control.carousel-control.right
{
    background-image: none !important;
}
.product-list .product-card .carousel .carousel-control.carousel-control.left
{
  background-image: none !important;
}
.product-list .product-card .carousel .carousel-indicators{
    padding:0px;
    bottom:-20px !important;
    background:none !important;
}
.product-list .product-card .carousel .carousel-indicators li{
    background:#ddd;
    border-radius:50%;
    height:5px;
    width:5px;
}
.product-list .product-card .carousel .carousel-indicators li.active{
    width:5px !important;
    background:#2196f3 !important;
}
.product-list .product-card .carousel-inner > .item{
    height:220px;
    line-height:220px;
    text-align:center;
}
.product-list .product-card .carousel-inner > .item > img{
    max-height:100%;
    margin: auto;
   vertical-align: middle; 
   display: inline-block;
}
.bgm-deeporange.active {
    background-color: rgb(236,60,0);
}
.btn-xs .flaticon::before, .btn-group-xs > .btn .flaticon::before{
    font-size:10px;
    margin-left:0px;
}
.btn-sm .flaticon::before, .btn-group-sm > .btn .flaticon::before{
    font-size:11px;
    margin-left:0px;
}
.tooltip .tooltip-inner{
    background-color:#111 !important;
}
.tooltip .tooltip-arrow{
    border-top-color:#111 !important;
}
.btn{
    text-transform:none;
}
.tags-popup{
    min-width:initial;
    padding:0px 10px 10px 10px;
    z-index:20;
}
.tags-popup .tag{
    display:inline-flex ;
}
.header-search .fg-line:before{
content: '\f1c3' ;
    font-family: 'Material-Design-Iconic-Font' ;
    position: absolute ;
    left: 0 ;
    bottom: 1px ;
    color: #fff ;
    font-size: 22px ;
}
.header-search input{
    width:100% ;
    background: transparent ;
    border: 0 ;
    border-bottom: 1px solid rgba(255, 255, 255, 0.24) ;
    color: #fff ;
    font-size: 15px ;
    font-weight: 300 ;
    padding: 6px 0 6px 30px ;
}

/**
 * Select2 - search 1
 */
.search1{display:none;}
.search1 .select2-container--default .select2-selection--single,
.search1 .select2-container--default .select2-selection--multiple,
.search1 .select2-container--default.select2-container--focus .select2-selection--multiple {
  background-color: transparent !important;
  height: 34px !important;
  border: none !important;
  border-bottom: 1px solid rgba(255, 255, 255, 0.24)!important;
  color:white;
  padding-left:25px;
  border-radius: 0 !important;
  outline: none !important; 
}

.search1 .select2-container--default .select2-selection--multiple:before{
    content: '\f1c3' !important;
    font-family: 'Material-Design-Iconic-Font' !important;
    position: absolute !important;
    left: 0 !important;
    bottom: 1px !important;
    color: #fff !important;
    font-size: 22px !important;
}

.search1 .select2-container--default .select2-search--inline .select2-search__field {
  height: 30px !important; }

.search1 .select2-container--default .select2-selection--multiple input {
  margin: 0 !important; }

.search1 .select2-container--default .select2-selection--multiple .select2-selection__choice {
  border: none !important;
    color: #333333;
    padding: 2px 7px !important;
    border-radius: 2px !important;
    font-size: 14px;
    margin-top: 3px !important;
    background-color: #fff; }

.search1 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove,
.search1 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
  color: #666;
  margin-right: 5px !important; }

.search1 .select2-container--default .select2-selection--single .select2-selection__rendered {
  line-height: 40px !important;
  padding: 0px !important; 
}

.search1 .select2-container--default .select2-selection--single .select2-selection__arrow {
  height: 40px !important; }

.search1 .select2-container--default .select2-selection--single .select2-selection__arrow b {
  border-color: rgba(0, 0, 0, 0.3) transparent transparent transparent !important; }

.search1 .select2-container--open .select2-dropdown--above,
.search1 .select2-container--open .select2-dropdown--below {
  border: none !important;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.26) !important; }

.search1 .select2-container--default .select2-results__option--highlighted[aria-selected] {
  background-color: #42A5F5 !important; }

.search1 .select2-results__option {
  padding: 1rem !important; }

.search1 .select2-container--default .select2-search--dropdown .select2-search__field {
  border-top: none !important;
  border-right: none !important;
  border-left: none !important; }  

.select2-results__option{
    padding:12px !important;
}
.select2-container--open .select2-dropdown--below{
    border:1px solid #ddd !important;
}
/**
 * Select2 - search 1
 */

.main-search .select2-container--default .select2-selection--single,
.main-search .select2-container--default .select2-selection--multiple,
.main-search .select2-container--default.select2-container--focus .select2-selection--multiple {
  background-color: #efefef !important;
  min-height: 40px !important;
  border: none !important;
  border:0px !important;
  color:white;
  border-radius: 0 !important;
  outline: none !important; 
  padding:0 10px 0 55px;
}
.main-search  #top-search-close{
    z-index:1;
}
.main-search .select2-container--default .select2-selection--multiple .select2-selection__choice {
  border: none !important;
    color: #fff;
    padding: 2px 7px !important;
    border-radius: 2px !important;
    font-size: 13px;
    margin-top: 3px !important;
    background-color: #aaa; }

.main-search .select2-container--default .select2-selection--multiple .select2-selection__choice__remove,
.main-search .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
  color: #fff;
  margin-right: 5px !important; }

.main-search .select2-container--default .select2-selection--multiple .select2-selection__rendered{
    padding:5px 0px !important;
}
.main-search .select2-container--default .select2-selection--multiple .select2-selection__clear{
    line-height: 20px;
    font-size: 25px;
    color:#777;
}

.main-search .select2-container--default .select2-search--inline .select2-search__field{
    color:#333;
    font-size:14px;
}
.select2-results__message {
  display: none !important;
}

/* Tags */

#search-tag-cnt{
    display:none;
}

.tag-color,.tag-color .select2-selection__choice__remove{
    color: #fff !important;
}

/*warning color*/
.tag-color1{
    background-color:#ff9800 !important;
}

/*danger color*/
.tag-color2{
    background-color:#f44336 !important;
}

/*info color*/
.tag-color3{
    background-color:#00bcd4 !important;
}

/*primary color*/
.tag-color4{
    background-color:#2196f3 !important;
}


.product-popup .carousel .carousel-control.left{
    left: -20px !important;
}
.product-popup .carousel .carousel-control.right{
    right: -20px !important;
}
.product-popup .carousel .carousel-control .zmdi{
    font-size:35px;
}
.product-popup .carousel .carousel-control.carousel-control.right
{
    background-image: none !important;
}
.product-popup .carousel .carousel-control.carousel-control.left
{
  background-image: none !important;
}

.product-popup .carousel .carousel-indicators{
    padding:0px;
    background:none !important;
    white-space:nowrap;
    position:relative !important;
    left:initial;
    right:initial;
    bottom:initial;
    top:initial;
}
.product-popup .carousel .carousel-indicators li{
    width:60px !important;
    display:inline-flex;
    margin:0px 3px 0px 3px;
    border:1px solid #ddd;
    padding:3px;
    height:58px;
    margin-top:1px; 
    overflow:hidden;
}
.product-popup .carousel .carousel-indicators li.active{
    width:60px !important;
    height: 58px !important;
    background-color:white;
    border:1px solid #999;
}
.product-popup .carousel .thumbnail-container{
    margin-top:10px;
    height:60px;
    overflow:hidden;
}
.product-popup .carousel .thumbnail-scroll{
    overflow-x:auto; width:calc(100% - 50px);float:left;
}
.product-popup .carousel .thumbnail-arrow{
    font-size:16px;width:25px;height:60px;display:inline-block;float:left;background-color:#eee;line-height:58px;text-align:center;
}

.product-popup .carousel .carousel-indicators li img{
    height:100%;
    margin:0px auto;
}
.product-popup .carousel-inner > .item > img{
    margin: auto;
   vertical-align: middle; 
   display: inline-block;
    max-height:100%;
}
.product-popup .carousel-inner > .item{
    height:300px;
    text-align:center;
    line-height:300px;
}
.product-popup .product-name{
    font-size:24px;
    font-weight:700;
    margin-bottom:10px;
}
.product-popup .carousel-inner > .item > img:hover{
}
.product-popup .product-tags .tag{
   margin-top: 8px;
    margin-right: 3px;
    padding: 3px 8px;
    font-size: 13px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.12) !important;
}
.product-popup .modal-body{
    padding:20px 25px 20px 25px;
}
.product-popup .modal-body .close{
    font-size:25px;
    padding:5px 10px;
}
.color-tags.tag:nth-child(1){

}
#product-popup-loader{
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1042;
    overflow: hidden;
    position: absolute;
    text-align:center;
    background: rgba(11,11,11,0.8);
    display:none;
}
#product-popup-loader .text{
    position:fixed;
    top:50%;
    margin-top:-8px;
    margin:auto;
    color:white;
    font-size:16px;
    width:100%;
}
#show-more-panel{
    text-align:center;
    margin-top:20px;
}
.logo img{
    height:37px;
}

